# PITBOSS

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: BetPanel.tsx  BossMark.tsx  ErrorBoundary.tsx  Header.tsx  MarketAdmin.tsx  MarketCard.tsx  PositionCard.tsx  Skeletons.tsx  Tape.tsx  Toast.tsx  ToteBoard.test.tsx  ToteBoard.tsx  TxSteps.tsx  WalletButton.tsx
apps/web/src/lib/: config.ts  env.ts  events.ts  format.test.ts  format.ts  hooks.ts  market.ts  odds.test.ts  odds.ts  stellar.ts  tx.ts  wallet.tsx
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  test.rs
contracts/market/test_snapshots/test/: bet_routes_fee_to_treasury_and_updates_pools.1.json  cannot_bet_after_close.1.json  cannot_resolve_before_close.1.json  double_claim_is_rejected.1.json  payout_is_proportional_across_multiple_winners.1.json  resolve_fails_until_oracle_reports.1.json  winner_claims_entire_pot.1.json  zero_amount_bet_rejected.1.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs  test.rs
contracts/oracle/test_snapshots/test/: add_reporter_then_report_and_read.1.json  cannot_report_same_market_twice.1.json  (+1 more)
contracts/treasury/src/: lib.rs  test.rs
deployments/: testnet.json
scripts/: deploy.sh
(+7 files in other folders)
